--- a/admin.html
+++ b/admin.html
@@ -14,14 +14,6 @@
     <!-- header -->
     <header class="bg-primary">
        <h1 class="bg-primary">Admin</h1>
-       <!-- <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-       </ul> -->
        <a href=""><i class="fa-solid fa-house"></i></a>
        <i class="fa-solid fa-house"></i>
        <i class="fa-solid fa-house"></i>
@@ -68,11 +60,14 @@
                     <div class="ct-sattistic">
                         <div class="user-order">
                             <div class="users radius">
-                                <span>Số người dùng</span><br><br>
-                                <span><i class="fa-regular fa-user fa-xl" style="color: #00bfff;"></i></span>
+                                <a href="">Số người dùng</a><br><br>
+                                <a href="" class="icon-user"><i class="fa-regular fa-user fa-2xl" style="color: #00bfff;"></i></a><br> <br>
+                                <span>90</span>
                             </div>
                             <div class="orders radius">
-                                <span>Số loại sản phẩm</span>
+                              <a href="">Tổng số sản phẩm</a><br><br>
+                              <a href="" class="icon-order"><i class="fa-brands fa-product-hunt fa-2xl" style="color: #005eff;"></i></a><br> <br>
+                              <span>290</span>
                             </div>
                         </div>
                         <div class="day-revenue radius">
@@ -83,7 +78,9 @@
                   
                 </div>
             </div>
-            <div class="box2"></div>
+            <div class="box2">
+
+            </div>
        </div>
     </main>
     <footer>
