feat: ui trang tin tuc

--- a/gioithieu.html
+++ b/gioithieu.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang hệ thống cửa hàng</title>
+    <title>Trang giới thiệu</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="./img/fonts/fontawesome-free-6.4.2/fontawesome-free-6.4.2-web/css/all.min.css">
 </head>
-
 <body>
     <!-- header -->
     <div class="box-header">
@@ -75,24 +74,15 @@
         </div>
     </div>
     <!-- main -->
-    <div class="tong container">
-        <div class="maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.8354772941!2d105.72923707503173!3d21.03926798061267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31345550b525aa03%3A0x3fdefc40f69a023a!2zQ2FvIMSR4bqzbmcgRlBUIFBo4buRIFRy4buLbmggVsSDbiBCw7QgLCBQaMaw4budbmcgUGjGsMahbmcgQ2FuaCAsIHF14bqtbiBU4burIExpw6pt!5e0!3m2!1svi!2s!4v1699488483931!5m2!1svi!2s" width="600" height="450" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-        </div>
-        <div class="form-group">
-            <select id="province" class="form-input" required>
-                <option value="Hanoi">Hà Nội</option>
-                <option value="HCMC">TP.HCM</option>
-                <option value="Danang">Đà Nẵng</option>
-                <!-- Thêm các tùy chọn tỉnh thành khác vào đây -->
-            </select>
-            <h5 style="margin: 10px;"><i class="fa-solid fa-location-dot" style="color: #3367c1; margin: 10px;"></i><strong>Hệ thống cửa hàng của ND Nội Thất trên toàn quốc</strong></h5>
-            <p>Trụ sở:</p>
-            <p>Trịnh Văn Bô, Phương Canh, Nam Từ Liêm, Hà Nội</p>
-        </div>
-
+    <div class="container">
+    <div class="tong">
+        <h2 style="margin-right: 1000px;"><strong>BRAND STORY</strong></h2>
     </div>
-    <!-- footer -->
+    <p style="margin: 10px;">ND Nội Thất là một công ty chuyên nghiệp cung cấp các giải pháp tư vấn trong các lĩnh vực: Tư vấn thiết kế thi công kiến trúc và nội ngoại thất nhà ở dân dụng, nhà ở chung cư, nhà ở biệt thự, nhà hàng khách sạn, quán bar cà phê, văn phòng làm việc, công trình công cộng…<br>
+        <br>
+        ND Nội Thất thiết kế và thi công nội thất theo mỗi phong cách riêng biệt từ cổ điển tới hiện đại, từ không gian hẹp đến không gian sống rộng. Không dừng lại ở đó công ty nội thất ​​​​​​​ND Nội Thất còn thiết kế từ phòng tắm qua phòng khách với những cầu thang hiện đại đi đến phòng ngủ. Ngoài những thiết kế và thi công nội thất trong nhà ND Nội Thất còn thiết kế và thi công sân vườn với thế mạnh về tiểu cảnh sân vườn.</p>
+    <div class="img-introduce" style="margin-bottom: 20px;"><img src="img/banner/anh-gioi-thieu.jpg" alt=""></div></div>
+        <!-- footer -->
     <footer class="container">
         <div class="left-footer">
             <h2>ND NỘI THẤT</h2>
