--- a/lienhe.html
+++ b/lienhe.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang hệ thống cửa hàng</title>
+    <title>Trang liên hệ</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="./img/fonts/fontawesome-free-6.4.2/fontawesome-free-6.4.2-web/css/all.min.css">
 </head>
-
 <body>
     <!-- header -->
     <div class="box-header">
@@ -76,21 +75,40 @@
     </div>
     <!-- main -->
     <div class="tong container">
-        <div class="maps">
+            <div>
+            <h5><strong>ND NỘI THẤT</strong></h5><br>
+            <div>
+                <p><i class="fa-solid fa-location-dot" style="color: #106F85; margin-right: 5px;"></i>Địa chỉ: 266 Đội Cấn, Ba Đình, Hà Nội</p>
+                <p><i class="fa-solid fa-phone" style="color: #106F85; margin: 5px 5px 0px 5px;"></i>Điện thoại: 19006750</p>
+                <p><i class="fa-solid fa-envelope" style="color: #106F85; margin-right: 5px;"></i>Email: caodangfpt@fpt.edu</p>
+            </div><br>
+            <h5><strong>Liên hệ với chúng tôi</strong></h5>
+            <div class="bentrai">
+                    <div class="form-container">
+                        <form>
+                            <div class="form-group">
+                                <label for="email" class="form-label">Email:</label>
+                                <input type="email" id="email" class="form-input" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="name" class="form-label">Họ tên:</label>
+                                <input type="text" id="name" class="form-input" required>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <textarea class="form-label" name="content" id=""content cols="30" rows="5" placeholder="Nội dung:" required></textarea>
+                            </div>
+                            <div class="form-group">
+                            <input style="margin: 10px 30px 10px 5px;" type="submit" value="Gửi liên hệ" class="submit-button">
+                            </div>
+                        </form>
+                </div> 
+                </div>
+                </div>
+        <br>
+        <div class="maps" style="margin: 50px 200px 10px 20px;">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.8354772941!2d105.72923707503173!3d21.03926798061267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31345550b525aa03%3A0x3fdefc40f69a023a!2zQ2FvIMSR4bqzbmcgRlBUIFBo4buRIFRy4buLbmggVsSDbiBCw7QgLCBQaMaw4budbmcgUGjGsMahbmcgQ2FuaCAsIHF14bqtbiBU4burIExpw6pt!5e0!3m2!1svi!2s!4v1699488483931!5m2!1svi!2s" width="600" height="450" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
         </div>
-        <div class="form-group">
-            <select id="province" class="form-input" required>
-                <option value="Hanoi">Hà Nội</option>
-                <option value="HCMC">TP.HCM</option>
-                <option value="Danang">Đà Nẵng</option>
-                <!-- Thêm các tùy chọn tỉnh thành khác vào đây -->
-            </select>
-            <h5 style="margin: 10px;"><i class="fa-solid fa-location-dot" style="color: #3367c1; margin: 10px;"></i><strong>Hệ thống cửa hàng của ND Nội Thất trên toàn quốc</strong></h5>
-            <p>Trụ sở:</p>
-            <p>Trịnh Văn Bô, Phương Canh, Nam Từ Liêm, Hà Nội</p>
-        </div>
-
     </div>
     <!-- footer -->
     <footer class="container">
