--- a/chitiettintuc.html
+++ b/chitiettintuc.html
@@ -124,7 +124,7 @@
                     </ul>
                 </div>
                 <br>
-                <img src="img/prd/cttintuc2.jpg" alt="" class="boxright__img">
+                <img src="img/prd/Component 2.png" alt="" class="boxright__img">
             </div>
             <div style="opacity: 0.5;">14</div>
         </div>
