--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -74,7 +74,7 @@
     </div>
     <!-- main -->
     <div class="container">
-
+        <br><br><br><br>
         <form action="" method="post" enctype="multipart/form-data">
             <main class="main">
                 <div class="product-detail">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="content">
                             <div class="file-content">
-                                <h3>Ghế Phòng Khách ND01</h3><br>
+                                <h4> Ghế Phòng Khách ND01</h4><br>
                                 <h6>Thương hiệu:Đang cập nhật | Tình Trạng :Còn hàng</h6><br>
 
                                 <h3>
@@ -176,7 +176,7 @@
                                         <p>15/03/2023</p>
                                         <p>There are many variations of passages of lorem Ipum available theresu anything embarrassing It’s a long established fact that a reader will be looking at its layout. </p>
                                     </span>
-                            </div>
+                            </div><br>
                             <div class="img-user">
                                 <img src="./img/anhsp/Screenshot 2023-06-08 002834.jpg" alt="" class="img">
                                 <span class="text-comment">
@@ -184,7 +184,7 @@
                                         <p>15/03/2023</p>
                                         <p>There are many variations of passages of lorem Ipum available theresu anything embarrassing It’s a long established fact that a reader will be looking at its layout. </p>
                                     </span>
-                            </div>
+                            </div><br>
                             <div class="img-user">
                                 <img src="./img/anhsp/Screenshot 2023-06-08 002834.jpg" alt="" class="img">
                                 <span class="text-comment">
@@ -192,7 +192,7 @@
                                         <p>15/03/2023</p>
                                         <p>There are many variations of passages of lorem Ipum available theresu anything embarrassing It’s a long established fact that a reader will be looking at its layout. </p>
                                     </span>
-                            </div>
+                            </div><br>
                             <div class="add-comment">
                                 <div class="text-comments">
                                     <input type="text" name="" id="" placeholder="Viết bình luận..." class="text-1">
