--- a/donhangcuaban.html
+++ b/donhangcuaban.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giỏ hàng của bạn</title>
-    <!-- Thêm các liên kết đến các file CSS và Bootstrap -->
+    <title>Trang đơn hàng của bạn</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
 <body>
+    <!-- header -->
     <div class="box-header">
         <header class="container">
             <div class="logo">
@@ -73,57 +74,26 @@
     </div>
     <!-- main -->
     <div class="tong container">
-        <div class="cart__content">
-        <!-- Tiêu đề giỏ hàng của bạn -->
-        <h2 class="cart__header">Giỏ hàng của bạn</h2>
-
-        <!-- Bảng sản phẩm -->
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Ảnh sản phẩm</th>
-                    <th scope="col">Tên sản phẩm</th>
-                    <th scope="col">Đơn giá</th>
-                    <th scope="col">Số lượng</th>
-                    <th scope="col">Thành tiền</th>
-                    <th scope="col">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Dòng sản phẩm mẫu -->
-                <tr>
-                    <td><img src="path_to_image.jpg" alt="Sản phẩm 1" style="width: 50px;"></td>
-                    <td>Sản phẩm 1</td>
-                    <td style="color: #106F85;">$20.00</td>
-                    <td><input type="number" value="1" min="1"></td>
-                    <td style="color: #106F85;">$20.00</td>
-                    <td><button class="btn btn-danger">Xoá</button></td>
-                </tr>
-                <!-- Thêm các dòng sản phẩm khác tương tự ở đây -->
-            </tbody>
-        </table>
-
-        <!-- Button tiếp tục mua hàng -->
-        <div class="cart__cost">
-            <button class="btn-form">Tiếp tục mua hàng</button>
-            <div class="cart__total">
-                    <div class="cart__total-money">
-                        <h6>Tổng tiền phải thanh toán: </h6>
-                    </div>
-                    <div class="cart__money">
-                        <h6>$100.00</h6>
-                    </div>
-                </div>
-        
+        <div class="accountorder__boxphai">
+            <h2>Trang tài khoản</h2>
+            <p>Xin chào, <strong>Khánh Nguyễn</strong></p>
+            <a href="#">Thông tin tài khoản</a><br><br>
+            <a href="#">Đơn hàng của bạn</a><br><br>
+            <a href="#">Đổi mật khẩu</a><br><br>
+            <a href="#">Số địa chỉ</a>
         </div>
-
-        <!-- Khung tổng tiền và Button thanh toán -->
-        <div class="cart__pay">
-
-            <button class="btn-form">Thanh toán</button>
+        <div class="accountorder__boxtrai">
+            <div class="accountorder__boxtrai--quantity">ĐƠN HÀNG CỦA BẠN(0)</div>
+            <div class="accountorder__boxtrai--dropdown">
+                <button class="dropbtn"><span>Tất cả</span> <i class="fa-solid fa-chevron-down"></i> </button>
+                <div class="dropdown-content">
+                <a href="#">Loại 1</a>
+                <a href="#">Loại 2</a>
+                <a href="#">Loại 3</a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
     <!-- footer -->
     <footer class="container">
         <div class="left-footer">
@@ -155,11 +125,6 @@
             <h2>CHÍNH SÁCH</h2>
         </div>
     </footer>
-
-    <!-- Thêm liên kết đến các file JavaScript và Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
-</html>
+</html>   
