--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <li><a href="">TIN TỨC</a></li>
                 <li><a href="">LIÊN HỆ</a></li>
             </ul>
+            <div class="bottom-header--icon"><i class="fa-solid fa-bars"></i></div>
         </div>
     </div>
     <!-- banner -->
