--- a/sodiachi.html
+++ b/sodiachi.html
@@ -77,10 +77,11 @@
         <div class="accountorder__boxphai">
             <h2>Trang tài khoản</h2>
             <p>Xin chào, <strong>Khánh Nguyễn</strong></p>
-            <a href="#">Thông tin tài khoản</a><br><br>
-            <a href="#">Đơn hàng của bạn</a><br><br>
-            <a href="#">Đổi mật khẩu</a><br><br>
+            <a href="#">Thông tin tài khoản</a>
+            <a href="#">Đơn hàng của bạn</a>
+            <a href="#">Đổi mật khẩu</a>
             <a href="#">Số địa chỉ</a>
+            <a href="#">Đăng xuất</a>
         </div>
         <div class="address__boxtrai">
             <h3>ĐỊA CHỈ CỦA TÔI</h3>
