--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
                 </a>
             </div>
         </header>
-        <div class="bottom-header">
+        <!-- <div class="bottom-header">
             <ul class="container">
                 <li class="categories">
                     <a href="">DANH MỤC SẢN PHẨM</a>
@@ -69,7 +69,7 @@
                 <li><a href="">TIN TỨC</a></li>
                 <li><a href="">LIÊN HỆ</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <!-- main -->
     <div class="tong container">
