--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -37,7 +37,7 @@
                 </a>
             </div>
         </header>
-        <div class="bottom-header">
+        <!-- <div class="bottom-header">
             <ul class="container">
                 <li class="categories">
                     <a href="">DANH MỤC SẢN PHẨM</a>
@@ -69,7 +69,7 @@
                 <li><a href="">TIN TỨC</a></li>
                 <li><a href="">LIÊN HỆ</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <!-- main -->
     <div class="tong container">
@@ -91,7 +91,7 @@
                 <div class="product__price--real">350.000 đ</div>
               </div>
               <p class="product__description">Chất Liệu: Vải nhập khẩu (da - bố - nhung) Nệm mousse D40 cao cấp Khung sườn: 100% gỗ dầu đã qua xử lý mối mọt Lò xo thép cường lực siêu bền Bảo Hành: 5 Năm Đặt Hàng: 7 - 10 ngày Vận Chuyển: miễn phí nội thành Hà Nội - hỗ trợ 1 phần đi tỉnh</p>
-              <div class="">Số lượng:
+              <div class="product__quantity--out">Số lượng:
               <input type="number" value="1" min="0"  class="product__quantity"></div>
               <br>
               <button class="product__add-to-cart">Thêm vào giỏ hàng</button>
