--- a/donhangcuaban.html
+++ b/donhangcuaban.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
         </header>
-        <div class="bottom-header">
+        <!-- <div class="bottom-header">
             <ul class="container">
                 <li class="categories">
                     <a href="">DANH MỤC SẢN PHẨM</a>
@@ -70,7 +70,7 @@
                 <li><a href="">TIN TỨC</a></li>
                 <li><a href="">LIÊN HỆ</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <!-- main -->
     <div class="tong container">
