--- a/gioithieu.html
+++ b/gioithieu.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
         </header>
-        <div class="bottom-header">
+        <!-- <div class="bottom-header">
             <ul class="container">
                 <li class="categories">
                     <a href="">DANH MỤC SẢN PHẨM</a>
@@ -70,12 +70,12 @@
                 <li><a href="">TIN TỨC</a></li>
                 <li><a href="">LIÊN HỆ</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <!-- main -->
     <div class="container">
     <div class="tong">
-        <h2 style="margin-right: 1000px;"><strong>BRAND STORY</strong></h2>
+        <h2 style="margin-right: 1000px;" class="title-introduce"><strong>BRAND STORY</strong></h2>
     </div>
     <p style="margin: 10px;">ND Nội Thất là một công ty chuyên nghiệp cung cấp các giải pháp tư vấn trong các lĩnh vực: Tư vấn thiết kế thi công kiến trúc và nội ngoại thất nhà ở dân dụng, nhà ở chung cư, nhà ở biệt thự, nhà hàng khách sạn, quán bar cà phê, văn phòng làm việc, công trình công cộng…<br>
         <br>
