--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
                     </form>
                 </div>
                 <div class="store">
-                    <a id="str" href="" class="text-black"><span></span>HỆ THỐNG CỬA HÀNG</a>
+                    <a id="str" href="">HỆ THỐNG CỬA HÀNG</a>
                 </div>
                 <div class="cart-account">
-                    <a href="" id="acount"><span></span>TÀI KHOẢN</a>
+                    <a href="" id="acount">TÀI KHOẢN</a>
                     <a href="">
                         <i class="fa-solid fa-cart-shopping fa-xl" style="color:black;"></i>
                     </a>
+                    <div class="bottom-header--icon" onclick="toggleDropdown()"><i class="fa-solid fa-bars"></i></div>
                 </div>
         </header>
-        <div class="bottom-header" >
-            <ul class="container">
-                <li class="categories" >
+        <div class="bottom-header" id="bottomHeader" >
+            
+            <ul class="cate__container">
+                <li class="categories">
                     <a href="">DANH MỤC SẢN PHẨM</a>
                     <ul>
                         <a href=""><li>> đă</li></a>
@@ -57,28 +59,29 @@
                 <li><a href="">TIN TỨC</a></li>
                 <li><a href="">LIÊN HỆ</a></li>
             </ul>
-            <div class="bottom-header--icon"><i class="fa-solid fa-bars"></i></div>
+
         </div>
     </div>
     <!-- banner -->
     <div class="swiper mySwiper banner">
         <div class="swiper-wrapper banner-wrapper">
+            <div class="swiper-slide">
+                <img src="./img/banner/Property 1=Default.png" alt="">
+            </div>
             <div class="swiper-slide banner">
                 <img src="./img/banner/baner2.png" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="./img/banner/baner2.png" alt="">
+                <img src="./img/banner/baner3.png" alt="">
             </div>
-            <div class="swiper-slide">
+            
+            <!-- <div class="swiper-slide">
                 <img src="./img/banner/baner2.png" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./img/banner/baner2.png" alt="">
-            </div>
+            </div> -->
         </div>
-        <div class="swiper-button-next"></div>
+        <!-- <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination"></div> -->
     </div>
     <!-- main -->
     <main> 
@@ -660,7 +663,7 @@
                             <i class="fa-solid fa-star fa-lg" style="color: #ffc800;"></i>
                             <i class="fa-solid fa-star fa-lg" style="color: #ffc800;"></i>
                         </div>
-                        <p class="cmt__desc">Bình luận đánh giá của khách hàng về trang webBình luận đánh giá của khách hàng về trang webBình luận đánh giá của khách hàng về trang webBình luận đánh giá của khách hàng về trang webBình luận đánh giá của khách hàng về trang web</p>
+                        <p class="cmt__desc">Bình luận đánh giá của khách hàng về trang webBình luận đánh giá của khách hàng về trang webBình luận đánh giá của khách hàng về trang web</p>
                     </div>
                 </div>
             </div>
@@ -697,7 +700,12 @@
             <h2>CHÍNH SÁCH</h2>
         </div>
     </footer>
-
+    <script>
+        function toggleDropdown() {
+        var dropdown = document.getElementById('bottomHeader');
+        dropdown.classList.toggle('show');
+    }
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script>
 // =========slider================
@@ -801,6 +809,7 @@ previousButton2.addEventListener('click', function () {
 });
 
 </script>
+
 </body>
 <!-- <script src="../js/main.js"></script> -->
 
